--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: '闲·情·雅·致'
+# '闲·情·雅·致'
+title: 'console.log('前端页面仔')'
 subtitle:
 description:
 keywords:
